GC log and GC tools